Alerts implemented - Added to Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.home.AddOrderActivity" />
+        <activity android:name=".ui.home.AddAlertActivity" />
         <activity android:name=".ui.home.OrderListActivity" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
